; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_server.c_cluster_conn_opts.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_server.c_cluster_conn_opts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i8* }
%struct.TYPE_13__ = type { i32 }
%struct.TYPE_12__ = type { i32, i32 }

@cluster_conn_opts.buf = internal global %struct.TYPE_11__* null, align 8
@.str = private unnamed_addr constant [8 x i8] c"--host \00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"--port %d --username \00", align 1
@os_info = common dso_local global %struct.TYPE_13__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @cluster_conn_opts(%struct.TYPE_12__* %0) #0 {
  %2 = alloca %struct.TYPE_12__*, align 8
  store %struct.TYPE_12__* %0, %struct.TYPE_12__** %2, align 8
  %3 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %4 = icmp eq %struct.TYPE_11__* %3, null
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call %struct.TYPE_11__* (...) @createPQExpBuffer()
  store %struct.TYPE_11__* %6, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  br label %10

7:                                                ; preds = %1
  %8 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %9 = call i32 @resetPQExpBuffer(%struct.TYPE_11__* %8)
  br label %10

10:                                               ; preds = %7, %5
  %11 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %10
  %16 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %17 = call i32 @appendPQExpBufferStr(%struct.TYPE_11__* %16, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %18 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %19 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @appendShellString(%struct.TYPE_11__* %18, i32 %21)
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %24 = call i32 @appendPQExpBufferChar(%struct.TYPE_11__* %23, i8 signext 32)
  br label %25

25:                                               ; preds = %15, %10
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %27 = load %struct.TYPE_12__*, %struct.TYPE_12__** %2, align 8
  %28 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @appendPQExpBuffer(%struct.TYPE_11__* %26, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %29)
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_13__, %struct.TYPE_13__* @os_info, i32 0, i32 0), align 4
  %33 = call i32 @appendShellString(%struct.TYPE_11__* %31, i32 %32)
  %34 = load %struct.TYPE_11__*, %struct.TYPE_11__** @cluster_conn_opts.buf, align 8
  %35 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %34, i32 0, i32 0
  %36 = load i8*, i8** %35, align 8
  ret i8* %36
}

declare dso_local %struct.TYPE_11__* @createPQExpBuffer(...) #1

declare dso_local i32 @resetPQExpBuffer(%struct.TYPE_11__*) #1

declare dso_local i32 @appendPQExpBufferStr(%struct.TYPE_11__*, i8*) #1

declare dso_local i32 @appendShellString(%struct.TYPE_11__*, i32) #1

declare dso_local i32 @appendPQExpBufferChar(%struct.TYPE_11__*, i8 signext) #1

declare dso_local i32 @appendPQExpBuffer(%struct.TYPE_11__*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
